[Changes 1.2c01]

* Use AI_ADDRCONFIG flag to improve server address selection when client
  is built for IPv6 but we don't have an IPv6 address. (caf)

* Enable SSL support by default, if OpenSSL is present at build time. (caf)

* Fix leak and potential crash in lame_resolv() using IPv6.  (caf, snadge)

* Apply patch from snadge defining BIND_4_COMPAT on OpenBSD, to allow
  /nslookup to build. (caf) 

* Fix problem connecting to IPv4 when IPv6 enabled on FreeBSD and enable 
  IPv6 on all supporting platforms. Thanks to brabes, snadge and packet. (caf)

* Improve connect() error handling. (caf)

* Remove obsolete .spec files. (caf)

* configure - only create sig.inc if it's actually needed. (caf)

* configure - use the right dependencies when checking for net/if.h, i
  arpa/inet.h and resolv.h. Reported by flashback. (caf)

* Fix plugin Makefiles for out-of-tree building, reported by nyet. (caf)

* Add DESTDIR support to build system, to ease rpm and deb packaging.
  Reported separately by nyet and VICODAN. (caf)

* Fix /detach and wserv with IPv6 enabled. (caf, snadge, packet)

* Make default for NICK_COMPLETION_CHAR explicit. (caf)

* Reduce footprint when starting up disconnected. (caf)

* Fix /nslookup command (including fixing compilation on cygwin). (caf)

* Improve /detach error handling and remove bogus F_SETOWN use, reported
  by madsage. (caf)

* Add /FSET WHOIS_SECURE for SSL connection info on ratbox, unreal and 
  freenode. (caf)

* Add /FSET CHANNEL_URL for services channel URL numeric. (caf)

* Fix crash bug in $mircansi() scripting function. (caf)

* Add half-op support to /topic and /untopic. (caf)

* Tidy up the URL grabber, fixing a memory leak. (caf)

* Cleanup the /BHELP code, fixing a potential crash. Apply updates to 
  BitchX.help from t3gah. (caf)

* [1.1s01] Sanity check color codes, fixes a potential crash. (caf)

* Add /FSET USERMODE_OTHER to correctly format user mode changes where the